compile_error.txt
  File "backend_main/app.py", line 349
    details_html += f\"\"\"
                      ^
SyntaxError: unexpected character after line continuation character
